--- a/thesis/org/evaluation.org
+++ b/thesis/org/evaluation.org
@@ -248,25 +248,25 @@
 
 **** A100 MAX LENGTH 100
 
-     |-----------------+------+------+------+-------+------+------+------+------|
-     | Batch size      |    1 |    2 |    4 |     8 |   16 |   32 |   64 |  128 |
-     |-----------------+------+------+------+-------+------+------+------+------|
-     | Ar Large        |      |      |      |       |      |      | 3090 | 1918 |
-     | Ar Base (stdnt) |      |      |      | 13836 | 7498 | 3997 | 2371 | 1465 |
-     |-----------------+------+------+------+-------+------+------+------+------|
-     | Large           | 7020 | 3874 | 2292 |  1547 | 1179 |  973 |  850 |  782 |
-     | Base            | 6289 | 3400 | 1854 |  1166 |  816 |  635 |  542 |  485 |
-     | Small           | 3300 | 1860 | 1051 |   717 |  526 |  434 |  380 |  357 |
-     | Micro           | 2322 | 1345 |  833 |   544 |  433 |  367 |  332 |  311 |
-     | Tiny            | 1360 |  780 |  503 |   367 |  301 |  273 |  252 |  243 |
-     |-----------------+------+------+------+-------+------+------+------+------|
+     |-----------------+------+------+-------+-------+------+------+------+------|
+     | Batch size      |    1 |    2 |     4 |     8 |   16 |   32 |   64 |  128 |
+     |-----------------+------+------+-------+-------+------+------+------+------|
+     | Ar Large        |      |      |       |       |      |      | 3090 | 1918 |
+     | Ar Base (stdnt) |      |      | 25745 | 13836 | 7498 | 3997 | 2371 | 1465 |
+     |-----------------+------+------+-------+-------+------+------+------+------|
+     | Large           | 7020 | 3874 |  2292 |  1547 | 1179 |  973 |  850 |  782 |
+     | Base            | 6289 | 3400 |  1854 |  1166 |  816 |  635 |  542 |  485 |
+     | Small           | 3300 | 1860 |  1051 |   717 |  526 |  434 |  380 |  357 |
+     | Micro           | 2322 | 1345 |   833 |   544 |  433 |  367 |  332 |  311 |
+     | Tiny            | 1360 |  780 |   503 |   367 |  301 |  273 |  252 |  243 |
+     |-----------------+------+------+-------+-------+------+------+------+------|
 
 **** Export
 
      | Batch size | Ar Large | Ar Base (stdnt) | Large | Base | Small | Micro | Tiny |
      |          1 |          |                 |  7020 | 6289 |  3300 |  2322 | 1360 |
      |          2 |          |                 |  3874 | 3400 |  1860 |  1345 |  780 |
-     |          4 |          |                 |  2292 | 1854 |  1051 |   833 |  503 |
+     |          4 |          |           25745 |  2292 | 1854 |  1051 |   833 |  503 |
      |          8 |          |           13836 |  1547 | 1166 |   717 |   544 |  367 |
      |         16 |          |            7498 |  1179 |  816 |   526 |   433 |  301 |
      |         32 |          |            3997 |   973 |  635 |   434 |   367 |  273 |
