--- a/thesis/img/throughputs/a100.tex
+++ b/thesis/img/throughputs/a100.tex
@@ -1,6 +1,6 @@
 \begin{tikzpicture}[gnuplot]
 %% generated with GNUPLOT 5.2p8 (Lua 5.3; terminal rev. Nov 2018, script rev. 108)
-%% Mon 08 Nov 2021 06:15:48 PM GMT
+%% Mon 08 Nov 2021 07:58:17 PM GMT
 \path (0.000,0.000) rectangle (13.500,8.000);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
@@ -9,24 +9,27 @@
 \draw[gp path] (1.872,0.985)--(2.052,0.985);
 \draw[gp path] (12.947,0.985)--(12.767,0.985);
 \node[gp node right] at (1.688,0.985) {0};
-\draw[gp path] (1.872,2.103)--(2.052,2.103);
-\draw[gp path] (12.947,2.103)--(12.767,2.103);
-\node[gp node right] at (1.688,2.103) {5,000};
-\draw[gp path] (1.872,3.220)--(2.052,3.220);
-\draw[gp path] (12.947,3.220)--(12.767,3.220);
-\node[gp node right] at (1.688,3.220) {10,000};
-\draw[gp path] (1.872,4.338)--(2.052,4.338);
-\draw[gp path] (12.947,4.338)--(12.767,4.338);
-\node[gp node right] at (1.688,4.338) {15,000};
+\draw[gp path] (1.872,1.879)--(2.052,1.879);
+\draw[gp path] (12.947,1.879)--(12.767,1.879);
+\node[gp node right] at (1.688,1.879) {2,000};
+\draw[gp path] (1.872,2.773)--(2.052,2.773);
+\draw[gp path] (12.947,2.773)--(12.767,2.773);
+\node[gp node right] at (1.688,2.773) {4,000};
+\draw[gp path] (1.872,3.667)--(2.052,3.667);
+\draw[gp path] (12.947,3.667)--(12.767,3.667);
+\node[gp node right] at (1.688,3.667) {6,000};
+\draw[gp path] (1.872,4.562)--(2.052,4.562);
+\draw[gp path] (12.947,4.562)--(12.767,4.562);
+\node[gp node right] at (1.688,4.562) {8,000};
 \draw[gp path] (1.872,5.456)--(2.052,5.456);
 \draw[gp path] (12.947,5.456)--(12.767,5.456);
-\node[gp node right] at (1.688,5.456) {20,000};
-\draw[gp path] (1.872,6.573)--(2.052,6.573);
-\draw[gp path] (12.947,6.573)--(12.767,6.573);
-\node[gp node right] at (1.688,6.573) {25,000};
-\draw[gp path] (1.872,7.691)--(2.052,7.691);
-\draw[gp path] (12.947,7.691)--(12.767,7.691);
-\node[gp node right] at (1.688,7.691) {30,000};
+\node[gp node right] at (1.688,5.456) {10,000};
+\draw[gp path] (1.872,6.350)--(2.052,6.350);
+\draw[gp path] (12.947,6.350)--(12.767,6.350);
+\node[gp node right] at (1.688,6.350) {12,000};
+\draw[gp path] (1.872,7.244)--(2.052,7.244);
+\draw[gp path] (12.947,7.244)--(12.767,7.244);
+\node[gp node right] at (1.688,7.244) {14,000};
 \draw[gp path] (1.872,0.985)--(1.872,1.165);
 \draw[gp path] (1.872,7.691)--(1.872,7.511);
 \node[gp node center] at (1.872,0.677) {1};
@@ -54,100 +57,101 @@
 \draw[gp path] (1.872,7.691)--(1.872,0.985)--(12.947,0.985)--(12.947,7.691)--cycle;
 \node[gp node center,rotate=-270] at (0.016,4.338) {Decoding time (seconds)};
 \node[gp node center] at (7.409,0.215) {Batch size};
-\node[gp node right] at (12.031,7.280) {Ar Large};
+\node[gp node right] at (12.031,7.280) {\acs{ar} Large};
 \gpcolor{rgb color={0.200,0.200,0.200}}
 \gpsetlinewidth{2.50}
 \draw[gp path] (12.215,7.280)--(12.579,7.280);
-\draw[gp path] (11.365,1.676)--(12.947,1.414);
+\draw[gp path] (11.365,2.366)--(12.947,1.842);
 \gpsetpointsize{4.00}
-\gppoint{gp mark 1}{(11.365,1.676)}
-\gppoint{gp mark 1}{(12.947,1.414)}
+\gppoint{gp mark 1}{(11.365,2.366)}
+\gppoint{gp mark 1}{(12.947,1.842)}
 \gppoint{gp mark 1}{(12.397,7.280)}
 \gpcolor{color=gp lt color border}
-\node[gp node right] at (12.031,6.818) {Ar Base (stdnt)};
+\node[gp node right] at (12.031,6.818) {\acs{ar} Base};
 \gpcolor{rgb color={0.800,0.800,0.800}}
 \draw[gp path] (12.215,6.818)--(12.579,6.818);
-\draw[gp path] (6.618,4.078)--(8.201,2.661)--(9.783,1.878)--(11.365,1.515)--(12.947,1.312);
-\gppoint{gp mark 2}{(6.618,4.078)}
-\gppoint{gp mark 2}{(8.201,2.661)}
-\gppoint{gp mark 2}{(9.783,1.878)}
-\gppoint{gp mark 2}{(11.365,1.515)}
-\gppoint{gp mark 2}{(12.947,1.312)}
+\draw[gp path] (6.463,7.691)--(6.618,7.171)--(8.201,4.337)--(9.783,2.772)--(11.365,2.045)%
+  --(12.947,1.640);
+\gppoint{gp mark 2}{(6.618,7.171)}
+\gppoint{gp mark 2}{(8.201,4.337)}
+\gppoint{gp mark 2}{(9.783,2.772)}
+\gppoint{gp mark 2}{(11.365,2.045)}
+\gppoint{gp mark 2}{(12.947,1.640)}
 \gppoint{gp mark 2}{(12.397,6.818)}
 \gpcolor{color=gp lt color border}
 \node[gp node right] at (12.031,6.356) {Large};
 \gpcolor{rgb color={0.800,0.000,0.000}}
 \draw[gp path] (12.215,6.356)--(12.579,6.356);
-\draw[gp path] (1.872,2.554)--(3.454,1.851)--(5.036,1.497)--(6.618,1.331)--(8.201,1.249)%
-  --(9.783,1.202)--(11.365,1.175)--(12.947,1.160);
-\gppoint{gp mark 3}{(1.872,2.554)}
-\gppoint{gp mark 3}{(3.454,1.851)}
-\gppoint{gp mark 3}{(5.036,1.497)}
-\gppoint{gp mark 3}{(6.618,1.331)}
-\gppoint{gp mark 3}{(8.201,1.249)}
-\gppoint{gp mark 3}{(9.783,1.202)}
-\gppoint{gp mark 3}{(11.365,1.175)}
-\gppoint{gp mark 3}{(12.947,1.160)}
+\draw[gp path] (1.872,4.123)--(3.454,2.717)--(5.036,2.010)--(6.618,1.677)--(8.201,1.512)%
+  --(9.783,1.420)--(11.365,1.365)--(12.947,1.335);
+\gppoint{gp mark 3}{(1.872,4.123)}
+\gppoint{gp mark 3}{(3.454,2.717)}
+\gppoint{gp mark 3}{(5.036,2.010)}
+\gppoint{gp mark 3}{(6.618,1.677)}
+\gppoint{gp mark 3}{(8.201,1.512)}
+\gppoint{gp mark 3}{(9.783,1.420)}
+\gppoint{gp mark 3}{(11.365,1.365)}
+\gppoint{gp mark 3}{(12.947,1.335)}
 \gppoint{gp mark 3}{(12.397,6.356)}
 \gpcolor{color=gp lt color border}
 \node[gp node right] at (12.031,5.894) {Base};
 \gpcolor{rgb color={1.000,0.800,0.000}}
 \draw[gp path] (12.215,5.894)--(12.579,5.894);
-\draw[gp path] (1.872,2.391)--(3.454,1.745)--(5.036,1.399)--(6.618,1.246)--(8.201,1.167)%
-  --(9.783,1.127)--(11.365,1.106)--(12.947,1.093);
-\gppoint{gp mark 4}{(1.872,2.391)}
-\gppoint{gp mark 4}{(3.454,1.745)}
-\gppoint{gp mark 4}{(5.036,1.399)}
-\gppoint{gp mark 4}{(6.618,1.246)}
-\gppoint{gp mark 4}{(8.201,1.167)}
-\gppoint{gp mark 4}{(9.783,1.127)}
-\gppoint{gp mark 4}{(11.365,1.106)}
-\gppoint{gp mark 4}{(12.947,1.093)}
+\draw[gp path] (1.872,3.797)--(3.454,2.505)--(5.036,1.814)--(6.618,1.506)--(8.201,1.350)%
+  --(9.783,1.269)--(11.365,1.227)--(12.947,1.202);
+\gppoint{gp mark 4}{(1.872,3.797)}
+\gppoint{gp mark 4}{(3.454,2.505)}
+\gppoint{gp mark 4}{(5.036,1.814)}
+\gppoint{gp mark 4}{(6.618,1.506)}
+\gppoint{gp mark 4}{(8.201,1.350)}
+\gppoint{gp mark 4}{(9.783,1.269)}
+\gppoint{gp mark 4}{(11.365,1.227)}
+\gppoint{gp mark 4}{(12.947,1.202)}
 \gppoint{gp mark 4}{(12.397,5.894)}
 \gpcolor{color=gp lt color border}
 \node[gp node right] at (12.031,5.432) {Small};
 \gpcolor{rgb color={0.800,0.000,1.000}}
 \draw[gp path] (12.215,5.432)--(12.579,5.432);
-\draw[gp path] (1.872,1.723)--(3.454,1.401)--(5.036,1.220)--(6.618,1.145)--(8.201,1.103)%
-  --(9.783,1.082)--(11.365,1.070)--(12.947,1.065);
-\gppoint{gp mark 5}{(1.872,1.723)}
-\gppoint{gp mark 5}{(3.454,1.401)}
-\gppoint{gp mark 5}{(5.036,1.220)}
-\gppoint{gp mark 5}{(6.618,1.145)}
-\gppoint{gp mark 5}{(8.201,1.103)}
-\gppoint{gp mark 5}{(9.783,1.082)}
-\gppoint{gp mark 5}{(11.365,1.070)}
-\gppoint{gp mark 5}{(12.947,1.065)}
+\draw[gp path] (1.872,2.460)--(3.454,1.817)--(5.036,1.455)--(6.618,1.306)--(8.201,1.220)%
+  --(9.783,1.179)--(11.365,1.155)--(12.947,1.145);
+\gppoint{gp mark 5}{(1.872,2.460)}
+\gppoint{gp mark 5}{(3.454,1.817)}
+\gppoint{gp mark 5}{(5.036,1.455)}
+\gppoint{gp mark 5}{(6.618,1.306)}
+\gppoint{gp mark 5}{(8.201,1.220)}
+\gppoint{gp mark 5}{(9.783,1.179)}
+\gppoint{gp mark 5}{(11.365,1.155)}
+\gppoint{gp mark 5}{(12.947,1.145)}
 \gppoint{gp mark 5}{(12.397,5.432)}
 \gpcolor{color=gp lt color border}
 \node[gp node right] at (12.031,4.970) {Micro};
 \gpcolor{rgb color={0.000,0.000,0.800}}
 \draw[gp path] (12.215,4.970)--(12.579,4.970);
-\draw[gp path] (1.872,1.504)--(3.454,1.286)--(5.036,1.171)--(6.618,1.107)--(8.201,1.082)%
-  --(9.783,1.067)--(11.365,1.059)--(12.947,1.055);
-\gppoint{gp mark 6}{(1.872,1.504)}
-\gppoint{gp mark 6}{(3.454,1.286)}
-\gppoint{gp mark 6}{(5.036,1.171)}
-\gppoint{gp mark 6}{(6.618,1.107)}
-\gppoint{gp mark 6}{(8.201,1.082)}
-\gppoint{gp mark 6}{(9.783,1.067)}
-\gppoint{gp mark 6}{(11.365,1.059)}
-\gppoint{gp mark 6}{(12.947,1.055)}
+\draw[gp path] (1.872,2.023)--(3.454,1.586)--(5.036,1.357)--(6.618,1.228)--(8.201,1.179)%
+  --(9.783,1.149)--(11.365,1.133)--(12.947,1.124);
+\gppoint{gp mark 6}{(1.872,2.023)}
+\gppoint{gp mark 6}{(3.454,1.586)}
+\gppoint{gp mark 6}{(5.036,1.357)}
+\gppoint{gp mark 6}{(6.618,1.228)}
+\gppoint{gp mark 6}{(8.201,1.179)}
+\gppoint{gp mark 6}{(9.783,1.149)}
+\gppoint{gp mark 6}{(11.365,1.133)}
+\gppoint{gp mark 6}{(12.947,1.124)}
 \gppoint{gp mark 6}{(12.397,4.970)}
 \gpcolor{color=gp lt color border}
 \node[gp node right] at (12.031,4.508) {Tiny};
 \gpcolor{rgb color={0.000,0.800,0.000}}
 \draw[gp path] (12.215,4.508)--(12.579,4.508);
-\draw[gp path] (1.872,1.289)--(3.454,1.159)--(5.036,1.097)--(6.618,1.067)--(8.201,1.052)%
-  --(9.783,1.046)--(11.365,1.041)--(12.947,1.039);
-\gppoint{gp mark 7}{(1.872,1.289)}
-\gppoint{gp mark 7}{(3.454,1.159)}
-\gppoint{gp mark 7}{(5.036,1.097)}
-\gppoint{gp mark 7}{(6.618,1.067)}
-\gppoint{gp mark 7}{(8.201,1.052)}
-\gppoint{gp mark 7}{(9.783,1.046)}
-\gppoint{gp mark 7}{(11.365,1.041)}
-\gppoint{gp mark 7}{(12.947,1.039)}
+\draw[gp path] (1.872,1.593)--(3.454,1.334)--(5.036,1.210)--(6.618,1.149)--(8.201,1.120)%
+  --(9.783,1.107)--(11.365,1.098)--(12.947,1.094);
+\gppoint{gp mark 7}{(1.872,1.593)}
+\gppoint{gp mark 7}{(3.454,1.334)}
+\gppoint{gp mark 7}{(5.036,1.210)}
+\gppoint{gp mark 7}{(6.618,1.149)}
+\gppoint{gp mark 7}{(8.201,1.120)}
+\gppoint{gp mark 7}{(9.783,1.107)}
+\gppoint{gp mark 7}{(11.365,1.098)}
+\gppoint{gp mark 7}{(12.947,1.094)}
 \gppoint{gp mark 7}{(12.397,4.508)}
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
