more results, more text in chapter 5

--- a/thesis/02-nmt.tex
+++ b/thesis/02-nmt.tex
@@ -130,6 +130,7 @@ be unseen words in the data. The following section lists methods that solve
 this problem.
 
 \subsection{Open Vocabulary Problem}
+\label{subsec:openvoc}
 
 % Zipf nature of language
 A well known characteristic of language is that it follows the Zipf's law
