--- a/thesis/org/evaluation.org
+++ b/thesis/org/evaluation.org
@@ -8,41 +8,39 @@
   Each dir contains a results/ folder, containing the translations and the scores.
   Ensembles are out of 4 models, single models are en-de_1 or de-en_1.
 
-
-
-
-
-
-
-
 ** English-German
 
    #+NAME: endetrqual
-   |---------------------------+--------+--------+--------+----------+---------+---------+---------+-----------+------+----------|
-   | Model                     | ChrF A | ChrF C | ChrF D | ChrF Avg | COMET A | COMET C | COMET D | COMET Avg | BLEU | BLEU Var |
-   |---------------------------+--------+--------+--------+----------+---------+---------+---------+-----------+------+----------|
-   | Single greedy AR          |        |        |        |          |         |         |         |           |      |          |
-   | Large                     |   56.4 |   61.0 |   60.1 |     59.2 |  0.3801 |  0.4341 |  0.4189 |    0.4110 | 50.5 |      1.3 |
-   | Base                      |   55.6 |   59.9 |   58.9 |     58.1 |  0.3594 |  0.4088 |  0.3962 |    0.3881 | 47.9 |      1.3 |
-   |                           |        |        |        |          |         |         |         |           |      |          |
-   | Single beam AR            |        |        |        |          |         |         |         |           |      |          |
-   | Large                     |   56.1 |   60.5 |   59.8 |     58.8 |  0.3770 |  0.4257 |  0.4133 |    0.4053 | 50.8 |      1.3 |
-   | Base                      |   55.4 |   59.7 |   58.6 |     57.9 |  0.3598 |  0.4067 |  0.3955 |    0.3873 | 48.0 |      1.3 |
-   |                           |        |        |        |          |         |         |         |           |      |          |
-   | Ensemble beam AR          |        |        |        |          |         |         |         |           |      |          |
-   | Large                     |   56.5 |   61.4 |   60.5 |     59.5 |  0.4015 |  0.4571 |  0.4411 |    0.4332 | 52.2 |      1.3 |
-   |---------------------------+--------+--------+--------+----------+---------+---------+---------+-----------+------+----------|
-   | Non-autoregressive models |        |        |        |          |         |         |         |           |      |          |
-   | Large                     |   55.9 |   60.5 |   59.4 |     58.6 |  0.1155 |  0.1756 |  0.1544 |    0.1485 | 47.8 |      1.2 |
-   | Base                      |   54.1 |   58.0 |   56.7 |     56.3 | -0.0753 | -0.0282 | -0.0528 |   -0.0521 | 41.8 |      1.1 |
-   | Small                     |   54.0 |   57.9 |   56.8 |     56.2 | -0.1024 | -0.0500 | -0.0731 |   -0.0752 | 41.9 |      1.1 |
-   | Micro                     |   55.1 |   58.9 |   57.8 |     57.3 | -0.0338 |  0.0159 | -0.0071 |   -0.0083 | 43.5 |      1.1 |
-   | Tiny                      |   51.8 |   55.0 |   54.0 |     53.6 | -0.3538 | -0.3116 | -0.3346 |   -0.3333 | 34.7 |      1.0 |
-   |---------------------------+--------+--------+--------+----------+---------+---------+---------+-----------+------+----------|
+   |---------------------------+--------------+--------+--------+----------+---------+---------+---------+-----------+------+----------+---+-----------------+--------+--------+------+---------+---------+---------+-----------+------+----------|
+   |                           | Full Output: |        |        |          |         |         |         |           |      |          |   | With Shortlist: |        |        |      |         |         |         |           |      |          |
+   |---------------------------+--------------+--------+--------+----------+---------+---------+---------+-----------+------+----------+---+-----------------+--------+--------+------+---------+---------+---------+-----------+------+----------|
+   | Model                     |       ChrF A | ChrF C | ChrF D | ChrF Avg | COMET A | COMET C | COMET D | COMET Avg | BLEU | BLEU Var |   |          Chrf A | Chrf C | Chrf D |  0.0 | COMET A | COMET C | COMET D | COMET Avg | BLEU | BLEU Var |
+   |---------------------------+--------------+--------+--------+----------+---------+---------+---------+-----------+------+----------+---+-----------------+--------+--------+------+---------+---------+---------+-----------+------+----------|
+   | Single greedy AR          |              |        |        |          |         |         |         |           |      |          |   |                 |        |        |  0.0 |         |         |         |           |      |          |
+   | Large                     |         56.4 |   61.0 |   60.1 |     59.2 |  0.3801 |  0.4341 |  0.4189 |    0.4110 | 50.5 |      1.3 |   |                 |        |        |  0.0 |         |         |         |           |      |          |
+   | Base                      |         55.6 |   59.9 |   58.9 |     58.1 |  0.3594 |  0.4088 |  0.3962 |    0.3881 | 47.9 |      1.3 |   |                 |        |        |  0.0 |         |         |         |           |      |          |
+   |                           |              |        |        |          |         |         |         |           |      |          |   |                 |        |        |  0.0 |         |         |         |           |      |          |
+   | Single beam AR            |              |        |        |          |         |         |         |           |      |          |   |                 |        |        |  0.0 |         |         |         |           |      |          |
+   | Large                     |         56.1 |   60.5 |   59.8 |     58.8 |  0.3770 |  0.4257 |  0.4133 |    0.4053 | 50.8 |      1.3 |   |                 |        |        |  0.0 |         |         |         |           |      |          |
+   | Base                      |         55.4 |   59.7 |   58.6 |     57.9 |  0.3598 |  0.4067 |  0.3955 |    0.3873 | 48.0 |      1.3 |   |                 |        |        |  0.0 |         |         |         |           |      |          |
+   |                           |              |        |        |          |         |         |         |           |      |          |   |                 |        |        |  0.0 |         |         |         |           |      |          |
+   | Ensemble beam AR          |              |        |        |          |         |         |         |           |      |          |   |                 |        |        |  0.0 |         |         |         |           |      |          |
+   | Large                     |         56.5 |   61.4 |   60.5 |     59.5 |  0.4015 |  0.4571 |  0.4411 |    0.4332 | 52.2 |      1.3 |   |                 |        |        |  0.0 |         |         |         |           |      |          |
+   |---------------------------+--------------+--------+--------+----------+---------+---------+---------+-----------+------+----------+---+-----------------+--------+--------+------+---------+---------+---------+-----------+------+----------|
+   | Student AR                |              |        |        |          |         |         |         |           |      |          |   |            57.0 |   61.5 |   60.4 | 59.6 |         |         |         |           | 51.6 |      1.2 |
+   |                           |              |        |        |          |         |         |         |           |      |          |   |                 |        |        |      |         |         |         |           |      |          |
+   | Non-autoregressive models |              |        |        |          |         |         |         |           |      |          |   |                 |        |        |      |         |         |         |           |      |          |
+   | Large                     |         55.9 |   60.5 |   59.4 |     58.6 |  0.1155 |  0.1756 |  0.1544 |    0.1485 | 47.8 |      1.2 |   |            56.0 |   60.6 |   59.5 | 58.7 |         |         |         |           | 47.7 |      1.2 |
+   | Base                      |         54.1 |   58.0 |   56.7 |     56.3 | -0.0753 | -0.0282 | -0.0528 |   -0.0521 | 41.8 |      1.1 |   |            54.1 |   58.0 |   56.8 | 56.3 |         |         |         |           | 41.8 |      1.1 |
+   | Small                     |         54.0 |   57.9 |   56.8 |     56.2 | -0.1024 | -0.0500 | -0.0731 |   -0.0752 | 41.9 |      1.1 |   |            53.9 |   57.9 |   56.7 | 56.2 |         |         |         |           | 41.9 |      1.2 |
+   | Micro                     |         55.1 |   58.9 |   57.8 |     57.3 | -0.0338 |  0.0159 | -0.0071 |   -0.0083 | 43.5 |      1.1 |   |            55.2 |   59.0 |   58.0 | 57.4 |         |         |         |           | 43.6 |      1.1 |
+   | Tiny                      |         51.8 |   55.0 |   54.0 |     53.6 | -0.3538 | -0.3116 | -0.3346 |   -0.3333 | 34.7 |      1.0 |   |            52.0 |   55.2 |   54.2 | 53.8 |         |         |         |           | 34.8 |      1.0 |
+   |---------------------------+--------------+--------+--------+----------+---------+---------+---------+-----------+------+----------+---+-----------------+--------+--------+------+---------+---------+---------+-----------+------+----------|
    #+TBLFM: $5=vmean($2..$4);%0.1f
    #+TBLFM: $9=vmean($6..$8);%0.4f
+   #+TBLFM: $16=vmean($13..$15);%0.1f
 
-*** Export
+**** Export
 
    |---------------------------+----------+-----------+------+----------|
    | Model                     | ChrF Avg | COMET Avg | BLEU | BLEU Var |
@@ -68,32 +66,40 @@
 
 
 
+*** En-De quality with Shortlist
+
+
 ** German-English
 
    #+NAME: deentrqual
-   |---------------------------+--------+--------+----------+---------+---------+-----------+------+----------|
-   | Model                     | ChrF A | Chrf B | ChrF Avg | COMET A | COMET B | COMET Avg | BLEU | BLEU Var |
-   |---------------------------+--------+--------+----------+---------+---------+-----------+------+----------|
-   | Single greedy AR          |        |        |          |         |         |           |      |          |
-   | Large                     |   60.2 |   63.5 |     61.9 |  0.5789 |  0.5947 |    0.5868 | 48.4 |      1.3 |
-   | Base                      |   59.5 |   62.4 |     61.0 |  0.5447 |  0.5616 |    0.5532 | 47.0 |      1.3 |
-   |                           |        |        |          |         |         |           |      |          |
-   | Single beam AR            |        |        |          |         |         |           |      |          |
-   | Large                     |   59.9 |   63.1 |     61.5 |  0.5777 |  0.5992 |    0.5885 | 49.2 |      1.2 |
-   | Base                      |   59.4 |   62.0 |     60.7 |  0.5453 |  0.5616 |    0.5534 | 47.4 |      1.3 |
-   |                           |        |        |          |         |         |           |      |          |
-   | Ensemble beam AR          |        |        |          |         |         |           |      |          |
-   | Large                     |   60.3 |   63.8 |     62.0 |  0.5818 |  0.6090 |    0.5954 | 50.6 |      1.3 |
-   |---------------------------+--------+--------+----------+---------+---------+-----------+------+----------|
-   | Non-autoregressive models |        |        |          |         |         |           |      |          |
-   | Large                     |   60.3 |   63.0 |     61.6 |  0.3207 |  0.3385 |    0.3296 | 46.4 |      1.4 |
-   | Base                      |   60.1 |   62.7 |     61.4 |  0.2923 |  0.2991 |    0.2957 | 45.8 |      1.3 |
-   | Small                     |   59.9 |   62.2 |     61.0 |  0.2420 |  0.2503 |    0.2462 | 44.6 |      1.3 |
-   | Micro                     |   58.5 |   60.8 |     59.6 |  0.1466 |  0.1485 |    0.1475 | 42.3 |      1.4 |
-   | Tiny                      |   55.2 |   56.5 |     55.9 | -0.1539 | -0.1578 |   -0.1558 | 34.4 |      1.3 |
-   |---------------------------+--------+--------+----------+---------+---------+-----------+------+----------|
+   |---------------------------+--------------+--------+----------+---------+---------+-----------+------+----------+---+-----------------+--------+------+---------+---------+-----------+------+----------|
+   |                           | Full Output: |        |          |         |         |           |      |          |   | With Shortlist: |        |      |         |         |           |      |          |
+   |---------------------------+--------------+--------+----------+---------+---------+-----------+------+----------+---+-----------------+--------+------+---------+---------+-----------+------+----------|
+   | Model                     |       ChrF A | Chrf B | ChrF Avg | COMET A | COMET B | COMET Avg | BLEU | BLEU Var |   |          Chrf A | Chrf B |  0.0 | COMET A | COMET B | COMET Avg | BLEU | BLEU Var |
+   |---------------------------+--------------+--------+----------+---------+---------+-----------+------+----------+---+-----------------+--------+------+---------+---------+-----------+------+----------|
+   | Single greedy AR          |              |        |          |         |         |           |      |          |   |                 |        |  0.0 |         |         |           |      |          |
+   | Large                     |         60.2 |   63.5 |     61.9 |  0.5789 |  0.5947 |    0.5868 | 48.4 |      1.3 |   |                 |        |  0.0 |         |         |           |      |          |
+   | Base                      |         59.5 |   62.4 |     61.0 |  0.5447 |  0.5616 |    0.5532 | 47.0 |      1.3 |   |                 |        |  0.0 |         |         |           |      |          |
+   |                           |              |        |          |         |         |           |      |          |   |                 |        |  0.0 |         |         |           |      |          |
+   | Single beam AR            |              |        |          |         |         |           |      |          |   |                 |        |  0.0 |         |         |           |      |          |
+   | Large                     |         59.9 |   63.1 |     61.5 |  0.5777 |  0.5992 |    0.5885 | 49.2 |      1.2 |   |                 |        |  0.0 |         |         |           |      |          |
+   | Base                      |         59.4 |   62.0 |     60.7 |  0.5453 |  0.5616 |    0.5534 | 47.4 |      1.3 |   |                 |        |  0.0 |         |         |           |      |          |
+   |                           |              |        |          |         |         |           |      |          |   |                 |        |  0.0 |         |         |           |      |          |
+   | Ensemble beam AR          |              |        |          |         |         |           |      |          |   |                 |        |  0.0 |         |         |           |      |          |
+   | Large                     |         60.3 |   63.8 |     62.0 |  0.5818 |  0.6090 |    0.5954 | 50.6 |      1.3 |   |                 |        |  0.0 |         |         |           |      |          |
+   |---------------------------+--------------+--------+----------+---------+---------+-----------+------+----------+---+-----------------+--------+------+---------+---------+-----------+------+----------|
+   | Student AR                |              |        |          |         |         |           |      |          |   |            61.6 |   65.0 | 63.3 |         |         |           | 51.1 |      1.3 |
+   |                           |              |        |          |         |         |           |      |          |   |                 |        |      |         |         |           |      |          |
+   | Non-autoregressive models |              |        |          |         |         |           |      |          |   |                 |        |      |         |         |           |      |          |
+   | Large                     |         60.3 |   63.0 |     61.6 |  0.3207 |  0.3385 |    0.3296 | 46.4 |      1.4 |   |            60.3 |   63.0 | 61.6 |         |         |           | 46.4 |      1.4 |
+   | Base                      |         60.1 |   62.7 |     61.4 |  0.2923 |  0.2991 |    0.2957 | 45.8 |      1.3 |   |            60.1 |   62.7 | 61.4 |         |         |           | 45.7 |      1.3 |
+   | Small                     |         59.9 |   62.2 |     61.0 |  0.2420 |  0.2503 |    0.2462 | 44.6 |      1.3 |   |            59.9 |   62.2 | 61.0 |         |         |           | 44.6 |      1.3 |
+   | Micro                     |         58.5 |   60.8 |     59.6 |  0.1466 |  0.1485 |    0.1475 | 42.3 |      1.4 |   |            58.5 |   60.8 | 59.6 |         |         |           | 42.3 |      1.4 |
+   | Tiny                      |         55.2 |   56.5 |     55.9 | -0.1539 | -0.1578 |   -0.1558 | 34.4 |      1.3 |   |            55.2 |   56.5 | 55.9 |         |         |           | 34.4 |      1.3 |
+   |---------------------------+--------------+--------+----------+---------+---------+-----------+------+----------+---+-----------------+--------+------+---------+---------+-----------+------+----------|
    #+TBLFM: $4=vmean($2..$3);%0.1f
    #+TBLFM: $7=vmean($5..$6);%0.4f
+   #+TBLFM: $13=vmean($11..$12);%0.1f
 
 
 *** Export
@@ -178,18 +184,29 @@
 
 *** Shortlist at 36 CPU cores
 
-    |---------+------+------+------+------+------+------+------|
-    | Batch   |    1 |    2 |    4 |    8 |   16 |   32 |   64 |
-    |---------+------+------+------+------+------+------+------|
-    | AR Big  |      |      |      |      |      |      |      |
-    | Ar Base |      |      |      |      |      |      |      |
-    |---------+------+------+------+------+------+------+------|
-    | Large   |      |      | 8245 | 7545 | 7434 | 7511 | 7639 |
-    | Base    | 2549 | 2298 | 2263 | 2306 | 2399 | 2503 | 2609 |
-    | Small   | 1346 | 1246 | 1250 | 1306 | 1399 | 1497 | 1606 |
-    | Micro   |  958 |  897 |  913 |  974 | 1062 | 1163 | 1271 |
-    | Tiny    |  244 |  246 |  273 |  316 |  373 |  437 |  506 |
-    |---------+------+------+------+------+------+------+------|
+    |---------+-------+------+-------+-------+-------+------+------|
+    | Batch   |     1 |    2 |     4 |     8 |    16 |   32 |   64 |
+    |---------+-------+------+-------+-------+-------+------+------|
+    | AR Big  |       |      |       |       |       |      |      |
+    | AR Base |       |      | 18914 | 13597 | 10946 | 9643 | 9154 |
+    |---------+-------+------+-------+-------+-------+------+------|
+    | Large   | 12799 | 9870 |  8245 |  7545 |  7434 | 7511 | 7639 |
+    | Base    |  2549 | 2298 |  2263 |  2306 |  2399 | 2503 | 2609 |
+    | Small   |  1346 | 1246 |  1250 |  1306 |  1399 | 1497 | 1606 |
+    | Micro   |   958 |  897 |   913 |   974 |  1062 | 1163 | 1271 |
+    | Tiny    |   244 |  246 |   273 |   316 |   373 |  437 |  506 |
+    |---------+-------+------+-------+-------+-------+------+------|
+
+**** Export
+
+    | Batch | AR Big | AR Base | Large | Base | Small | Micro | Tiny |
+    |     1 |        |         | 12799 | 2549 |  1346 |   958 |  244 |
+    |     2 |        |         |  9870 | 2298 |  1246 |   897 |  246 |
+    |     4 |        |   18914 |  8245 | 2263 |  1250 |   913 |  273 |
+    |     8 |        |   13597 |  7545 | 2306 |  1306 |   974 |  316 |
+    |    16 |        |   10946 |  7434 | 2399 |  1399 |  1062 |  373 |
+    |    32 |        |    9643 |  7511 | 2503 |  1497 |  1163 |  437 |
+    |    64 |        |    9154 |  7639 | 2609 |  1606 |  1271 |  506 |
 
 
 
@@ -248,30 +265,34 @@
 
 **** A100 MAX LENGTH 100
 
-     |-----------------+------+------+-------+-------+------+------+------+------|
-     | Batch size      |    1 |    2 |     4 |     8 |   16 |   32 |   64 |  128 |
-     |-----------------+------+------+-------+-------+------+------+------+------|
-     | Ar Large        |      |      |       |       |      |      | 3090 | 1918 |
-     | Ar Base (stdnt) |      |      | 25745 | 13836 | 7498 | 3997 | 2371 | 1465 |
-     |-----------------+------+------+-------+-------+------+------+------+------|
-     | Large           | 7020 | 3874 |  2292 |  1547 | 1179 |  973 |  850 |  782 |
-     | Base            | 6289 | 3400 |  1854 |  1166 |  816 |  635 |  542 |  485 |
-     | Small           | 3300 | 1860 |  1051 |   717 |  526 |  434 |  380 |  357 |
-     | Micro           | 2322 | 1345 |   833 |   544 |  433 |  367 |  332 |  311 |
-     | Tiny            | 1360 |  780 |   503 |   367 |  301 |  273 |  252 |  243 |
-     |-----------------+------+------+-------+-------+------+------+------+------|
+     |-----------------+------+-------+-------+-------+------+------+------+------|
+     | Batch size      |    1 |     2 |     4 |     8 |   16 |   32 |   64 |  128 |
+     |-----------------+------+-------+-------+-------+------+------+------+------|
+     | Ar Large        |      | 53902 | 29369 | 15351 | 8907 | 5216 | 3090 | 1918 |
+     | Ar Base (stdnt) |      | 47145 | 25745 | 13836 | 7498 | 3997 | 2371 | 1465 |
+     |-----------------+------+-------+-------+-------+------+------+------+------|
+     | Large           | 7020 |  3874 |  2292 |  1547 | 1179 |  973 |  850 |  782 |
+     | Base            | 6289 |  3400 |  1854 |  1166 |  816 |  635 |  542 |  485 |
+     | Small           | 3300 |  1860 |  1051 |   717 |  526 |  434 |  380 |  357 |
+     | Micro           | 2322 |  1345 |   833 |   544 |  433 |  367 |  332 |  311 |
+     | Tiny            | 1360 |   780 |   503 |   367 |  301 |  273 |  252 |  243 |
+     |-----------------+------+-------+-------+-------+------+------+------+------|
 
 **** Export
 
      | Batch size | Ar Large | Ar Base (stdnt) | Large | Base | Small | Micro | Tiny |
      |          1 |          |                 |  7020 | 6289 |  3300 |  2322 | 1360 |
-     |          2 |          |                 |  3874 | 3400 |  1860 |  1345 |  780 |
-     |          4 |          |           25745 |  2292 | 1854 |  1051 |   833 |  503 |
-     |          8 |          |           13836 |  1547 | 1166 |   717 |   544 |  367 |
-     |         16 |          |            7498 |  1179 |  816 |   526 |   433 |  301 |
-     |         32 |          |            3997 |   973 |  635 |   434 |   367 |  273 |
+     |          2 |    53902 |           47145 |  3874 | 3400 |  1860 |  1345 |  780 |
+     |          4 |    29369 |           25745 |  2292 | 1854 |  1051 |   833 |  503 |
+     |          8 |    15351 |           13836 |  1547 | 1166 |   717 |   544 |  367 |
+     |         16 |     8907 |            7498 |  1179 |  816 |   526 |   433 |  301 |
+     |         32 |     5216 |            3997 |   973 |  635 |   434 |   367 |  273 |
      |         64 |     3090 |            2371 |   850 |  542 |   380 |   332 |  252 |
      |        128 |     1918 |            1465 |   782 |  485 |   357 |   311 |  243 |
+
+
+
+
 
 * Old stuff
   The NAT models in these tables are with max-length set to 100. AR models are
