--- a/thesis/05-experiments.tex
+++ b/thesis/05-experiments.tex
@@ -172,20 +172,17 @@ achieved by the trained models are shown in Table
 % backtranslation version or 14 for the 150M backtranslation version.
 
 % ------------------------------------------------------------------------------
-\paragraph{Backtranslation.} We train four translation models on the filtered
-parallel dataset for creating backtranslations
-\citep{sennrich-etal-2016-improving}. We use identical Transformer big
-hyperparameter settings but we use different random seeds for parameter
-initialization. We use the same hyperparameter settings as for the teacher
-models. The parameter values are shown in Table \ref{tab:trafo-big-hparams}
-% The Transformer big models have a 6-layer encoder and a 6-layer decoder, with
-% 16 attention heads in the self-attention and cross-attention, with the model
-% dimension of 1,024, and the feed-forward hidden layer dimension of 4,096. We
-% use a shared SentencePiece vocabulary of 32,000 tokens.  \JH{Make a table out
-% of this.}
-We ensemble the four models to translate the monolingual data. \JH{Say more
-  about decoding -- beam search, normalization, etc.} \JH{Somewhere we need to
-  say that we are using Marian to train all the models in this chapter.}
+\paragraph{Backtranslation.} We train three additional translation models (four
+in total with the one from the data cleaning step) on the filtered parallel
+dataset for creating backtranslations \citep{sennrich-etal-2016-improving}. We
+use the same hyperparameter settings as for the teacher models (see Table
+\ref{tab:trafo-big-hparams}), except for different random seeds for parameter
+initialization.
+
+We translate the monolingual data using the four models in an ensemble. We
+limit the target sentence length to 150 tokens and we use beam search decoding
+with 6 hypotheses in the beam, with the length normalization parameter set to
+1.
 
 As the source of the monolingual data, we use the News Crawl datasets from
 years 2018, 2019, and 2020, as released by the \acs{wmt} organizers
@@ -232,9 +229,8 @@ Table \ref{tab:trafo-big-hparams}.
 
 After the training on mixed parallel and backtranslated data converged, we
 continued the training of the models on parallel data only.
-\JH{Early stopping.}
-
-\JH{Add a table with scores of the teacher models.}
+% \JH{Early stopping.}
+% \JH{Add a table with scores of the teacher models.}
 
 \begin{table}
   \centering
@@ -270,6 +266,13 @@ continued the training of the models on parallel data only.
 
 \end{table}
 % ------------------------------------------------------------------------------
+\footnotetext{We did not use gradient clipping because of issues in the Marian
+  toolkit implementation.  \JH{is there an issue? Also, put this on the right
+    page.}}  % JH: Perhaps switch to the footnote package, which can handle
+             % that better
+% ------------------------------------------------------------------------------
+
+% ------------------------------------------------------------------------------
 \paragraph{Knowledge Distillation.} The teacher models are used to create
 artificial targets for the student models \citep{kim-rush-2016-sequence}. For
 each translation direction, we translate the source side of the parallel data
@@ -277,15 +280,15 @@ and the authentic monolingual data (in the source language) using ensembled
 teacher models. We do not create wholly synthetic datasets by
 forward-translating backtranslated data.
 
+For generating the knowledge distilled dataset, we use beam search with the
+beam size of 12 and the normalization parameter set to 0.8. Similarly to
+generating the backtranslated data, we limit the target sentence length to 150
+tokens.
+
 
 % ------------------------------------------------------------------------------
 \section{Student Models}%
 \label{sec:exp:students}
-% ------------------------------------------------------------------------------
-\footnotetext{We did not use gradient clipping because of issues in the Marian
-  toolkit implementation.  \JH{is there an issue? Also, put this on the right
-    page.}}  % JH: Perhaps switch to the footnote package, which can handle
-             % that better
 % ------------------------------------------------------------------------------
 
 In this section, we describe our non-autoregressive student models. We
@@ -364,29 +367,29 @@ of parameter updates.
 \label{subsec:exp:shortlist}
 % ------------------------------------------------------------------------------
 
-\JH{in this subsection, describe what lexical shortlists are (link to cahpter 2
-  if there is a mention). Then, say how we created the shortlist and how big it
-  is and stuff like that.}
+Shortlisting is a method used for speeding up the decoding out of a translation
+model, originally proposed by \citet{jean-etal-2015-using} as means to tackle
+the open vocabulary problem on the generation side (see Section
+\ref{subsec:openvoc}). Since then, it has been used as an optimization method
+for creating efficient translation systems \citep{kim-etal-2019-research,
+  bogoychev-etal-2020-edinburghs}.  In our experiments, we employ shortlisting
+as one of the standard optimization techniques to find out whether it has a
+positive effect on the decoding speed not only in \ac{ar} models, but also in
+\ac{nar} models.
 
-\JH{shoftlisting is an optimization method used for speeding up the decoding
-  out of a translation mdoel, previously only employed in autoregressive models
-  \citep{jean, bogoychev}. The idea of using a lexical shortlist is to reduce
-  the size of the large output projection matrix (recall the dimension of the
-  ouptut matrix is $d \times |V|$), and thus save time on the matrix
-  multiplication operation. The size reduction is realized by leaving out
-  columns corresponding to words which are not likely to appear on the output.}
+A lexical shortlist limits the number of possible output tokens, reducing the
+dimension of the output projection matrix (recall the dimension of the output
+matrix is otherwise $d \times |V|$) and thus saving time on matrix
+multiplication operation. Output probabilities of the tokens which are not in
+the shortlist are not computed (and these tokens are never generated).
 
-\JH{For a batch of source sentences, the lexical shortlist is a list of tokens
-  from the vocabulary which are considered as potential target words based on
-  an bilingual lexicon. The words which are not in the shortlist are not
-  generated. In our experiments, we include 100 most frequent target tokens and
-  100 most probable translations for each source token in the batch.}
-
-
-
-
-
-
+For each batch, a new shortlist is generated using a bilingual lexicon.  Using
+a parallel corpus, the word alignment is computed. The bilingual lexicon is the
+set of target tokens aligned with each source token, along with the
+frequencies. To create a shortlist for a given batch, the potential
+translations of every source token are added to the shortlist. Specifically in
+our settings, we include 100 most frequent and 100 most probable translations
+of each token.
 
 % ------------------------------------------------------------------------------
 \section{Results}%
@@ -408,36 +411,35 @@ the results of the \ac{wmt}~21 Efficiency Shared Task which features
 highly-optimized \ac{ar} translation models.  In the \ac{nar} literature, the
 \acs{wmt}~14 test set \citep{bojar-etal-2014-findings} is used as a standard
 benchmark. On the other hand, the efficiency task uses the recent test set from
-\acs{wmt}~21 \JH{cite findings}.
+\acs{wmt}~21 \JH{cite findings}. In this section, we present the results on
+both datasets.
 
 \paragraph{Results on the \acs{wmt}~21 test set.}
 As argued in Section \ref{sec:evaluation}, \acs{bleu} alone is not necessarily
 a reliable automatic metric. In line with the evaluation methodology of the
 efficiency task, we also measure \acs{comet} \citep{rei-etal-2020-comet} and
-\acs{chrf} \citep{popovic-2015-chrf}. We do not perform human evaluation.
+\acs{chrf} score \citep{popovic-2015-chrf}. We do not perform human evaluation.
 
-Tables \ref{tab:wmt21-scores-ende} and \ref{tab:wmt21-scores-deen} show the
-results of automatic evaluation
+Table \ref{tab:wmt21-scores} shows the results of automatic evaluation
 % with \acs{bleu}, \acs{chrf}, and \acs{comet}% scores
-on the \acs{wmt}~21 news translation test set. In the English
-$\rightarrow$ German direction, the test set consists of 1,002 sentences along
-with three different reference translations. In the German $\rightarrow$
-English direction, there are 1,000 sentences with two reference translations
-each. We measure multi-reference \acs{bleu} score using Sacrebleu
-\citep{post-2018-call}, computing confidence intervals with bootstrap
-resampling. We report the Sacrebleu signatures for English $\rightarrow$
-German%
+on the \acs{wmt}~21 news translation test set. In the English $\rightarrow$
+German direction, the test set consists of 1,002 sentences along with three
+different reference translations. In the German $\rightarrow$ English
+direction, there are 1,000 sentences with two reference translations each. We
+measure multi-reference \acs{bleu} score using Sacrebleu \citep{post-2018-call}
+and we report confidence intervals computed with bootstrap resampling. We
+report the Sacrebleu signatures for English $\rightarrow$ German%
 \footnote{En$\rightarrow$De: {\scriptsize
     \texttt{nrefs:3|bs:1000|seed:12345|case:mixed|eff:no|tok:13a|smooth:exp|version:2.0.0}}}
 and German $\rightarrow$ English%
 \footnote{De$\rightarrow$En: {\scriptsize
     \texttt{nrefs:2|bs:1000|seed:12345|case:mixed|eff:no|tok:13a|smooth:exp|version:2.0.0}}}
-directions. We use Sacrebleu to compute the \acs{chrf} score separately for
-each reference translation set, and we report the average.\footnote{\acs{chrf};
-  En$\leftrightarrow$De: {\scriptsize
+directions. We compute the \acs{chrf} score separately on each reference
+translation set using Sacrebleu, and we report the
+average.\footnote{\acs{chrf}; En$\leftrightarrow$De: {\scriptsize
     \texttt{nrefs:1|case:mixed|eff:yes|nc:6|nw:0|space:no|version:2.0.0}}}
-Finally, the \acs{comet} scores are computed with \acs{comet} version
-\texttt{dd2298} (1.0.0rc9) using the \texttt{wmt20-comet-da} model.
+Finally, we compute the \acs{comet} scores with the \texttt{wmt20-comet-da}
+model of \acs{comet} version \texttt{dd2298} (1.0.0rc9).
 
 We observe that in both translation directions, the \ac{ar} models outperform
 the \ac{nar} models. The performance gap between the models grows futher with
@@ -453,23 +455,30 @@ human evaluation, despite achieving reasonable \acs{bleu} scores.
 %   could suggest that NAR systems will rank poorly in human evaluation even
 %   though they achieve high BLEU scores.}
 
-The results on the test set confirm the ranking of the \acs{nar} models
-apparent from the learning curves (see Figures \ref{fig:ende-learning-curves}
-and \ref{fig:deen-learning-curves}), with the interesting exception of the
+The results on the test set confirm the ranking of the \acs{nar} models as seen
+during training (see Figures \ref{fig:ende-learning-curves} and
+\ref{fig:deen-learning-curves}), including the interesting exception of the
 English $\rightarrow$ German Micro model. Otherwise, the larger the student
 model is, the better scores it achieves.
 % \JH{we have experiments with tied embeddings but I would keep them out
 % because the results were the same.}
 
+\JH{zakomponovat kvalitu modelu se shortlistem.}
+
+
 \begin{table}
   \centering
 
-  \begin{tabular}{lrrr@{}>{\small \enspace \textpm}l}
+  \begin{tabular}{lrrr@{}>{\small \enspace \textpm}lrrr@{}>{\small \enspace
+        \textpm}l}
     \toprule
-    En $\rightarrow$ De & \acs{chrf} & \acs{comet} & \multicolumn{2}{c}{\acs{bleu}} \\
+    \multirow{2}{*}{\bf En $\rightarrow$ De} %
+    & \multicolumn{4}{c}{Full output projection} & \multicolumn{4}{c}{Shortlist} \\
+    & \acs{chrf} & \acs{comet} & \multicolumn{2}{c}{\acs{bleu}}
+    & \acs{chrf} & \acs{comet} & \multicolumn{2}{c}{\acs{bleu}} \\
     \midrule
     Single greedy \acs{ar} \\
-    Large & 59.2 & 0.4110  & 50.5  & 1.3 \\
+    Large & 59.2 & 0.4110  & 50.5  & 1.3 & 00.0 & -0.0000 & 00.0 & 0.0 \\
     Base & 58.1 & 0.3881 & 47.9 & 1.3 \\
     \addlinespace
     Single beam \acs{ar} \\
@@ -479,15 +488,16 @@ model is, the better scores it achieves.
     Ensemble beam \acs{ar} \\
     Large & 59.5 & 0.4332 & 52.2 & 1.3 \\
     \midrule
-    Student (single, greedy) \acs{ar} \\
-    Base & 59.5 & 0.4550 & 51.6 &  1.2 \\
+    Student \acs{ar} \\
+    %Student (single, greedy) \acs{ar} \\
+    Base  & 59.5 & 0.4550 & 51.6 &  1.2 & 59.6 & & 51.6 & 1.2 \\
     \addlinespace
-    \Acl{nar} models \\
-    Large & 58.6 & 0.1485 & 47.8 & 1.2\\
-    Base & 56.3 & -0.0521 & 41.8 & 1.1\\
-    Small & 56.2 & -0.0752 & 41.9 & 1.1\\
-    Micro & 57.3 & -0.0083 & 43.5 & 1.1\\
-    Tiny & 53.6 & -0.3333 & 34.7 & 1.0\\
+    \Acs{nar} models \\
+    Large & 58.6 &  0.1485 & 47.8 & 1.2 & 58.7 & & 47.7 & 1.2 \\
+    Base  & 56.3 & -0.0521 & 41.8 & 1.1 & 56.3 & & 41.8 & 1.1 \\
+    Small & 56.2 & -0.0752 & 41.9 & 1.1 & 56.2 & & 41.9 & 1.2 \\
+    Micro & 57.3 & -0.0083 & 43.5 & 1.1 & 57.4 & & 43.6 & 1.1 \\
+    Tiny  & 53.6 & -0.3333 & 34.7 & 1.0 & 53.8 & & 34.8 & 1.0 \\
     % Large & 58.6 & 0.0909 & 47.4 & 1.1 \\
     % Base & 56.2 & -0.0914 & 41.4 & 1.1 \\
     % Small & 56.2 & -0.0957 & 41.7 & 1.1 \\
@@ -496,21 +506,27 @@ model is, the better scores it achieves.
     \bottomrule
   \end{tabular}
 
-  \caption{Quantitative results of the English $\rightarrow$ German translation
-    models on the \acs{wmt}~21 test set using three different automatic
-    evalutation metrics.}%
-  \label{tab:wmt21-scores-ende}
-\end{table}
+%   \caption{Quantitative results of the English $\rightarrow$ German translation
+%     models on the \acs{wmt}~21 test set using three different automatic
+%     evalutation metrics.}%
+%   \label{tab:wmt21-scores-ende}
+% \end{table}
 
-\begin{table}
-  \centering
+% \begin{table}
+%   \centering
 
-  \begin{tabular}{lrrr@{}>{\small \enspace \textpm}l}
+  \vspace{1\baselineskip}
+
+  \begin{tabular}{lrrr@{}>{\small \enspace \textpm}lrrr@{}>{\small \enspace
+        \textpm}l}
     \toprule
-    De $\rightarrow$ En & \acs{chrf} & \acs{comet} & \multicolumn{2}{c}{\acs{bleu}} \\
+    \multirow{2}{*}{\bf De $\rightarrow$ En} %
+    & \multicolumn{4}{c}{Full output projection} & \multicolumn{4}{c}{Shortlist} \\
+    & \acs{chrf} & \acs{comet} & \multicolumn{2}{c}{\acs{bleu}}
+                 & \acs{chrf} & \acs{comet} & \multicolumn{2}{c}{\acs{bleu}} \\
     \midrule
     Single greedy \acs{ar} \\
-    Large & 61.9 & 0.5868 & 48.4 & 1.3 \\
+    Large & 61.9 & 0.5868 & 48.4 & 1.3 & 00.0 & -0.0000 & 00.0 & 0.0 \\
     Base & 61.0 & 0.5532 & 47.0 & 1.3 \\
     \addlinespace
     Single beam \acs{ar} \\
@@ -520,15 +536,15 @@ model is, the better scores it achieves.
     Ensemble beam \acs{ar} \\
     Large & 62.1 & 0.5954 & 50.6 & 1.3 \\
     \midrule
-    Student (single, greedy) \acs{ar} \\
-    Base & 63.3 & 0.6115 & 51.1 & 1.3 \\
+    Student \acs{ar} \\
+    Base & 63.3 & 0.6115 & 51.1 & 1.3 & 63.3 & & 51.1 & 1.3 \\
     \addlinespace
-    \Acl{nar} models \\
-    Large & 61.6 & 0.3296 & 46.4 & 1.4\\
-    Base & 61.4 & 0.2957 & 45.8 & 1.3\\
-    Small & 61.0 & 0.2462 & 44.6 & 1.3\\
-    Micro & 59.6 & 0.1475 & 42.3 & 1.4\\
-    Tiny & 55.9 & -0.1558 & 34.4 & 1.3\\
+    \Acs{nar} models \\
+    Large & 61.6 &  0.3296 & 46.4 & 1.4 & 61.6 & & 46.4 & 1.4 \\
+    Base  & 61.4 &  0.2957 & 45.8 & 1.3 & 61.4 & & 45.7 & 1.3 \\
+    Small & 61.0 &  0.2462 & 44.6 & 1.3 & 61.0 & & 44.6 & 1.3 \\
+    Micro & 59.6 &  0.1475 & 42.3 & 1.4 & 59.6 & & 42.3 & 1.4 \\
+    Tiny  & 55.9 & -0.1558 & 34.4 & 1.3 & 55.9 & & 34.4 & 1.3 \\
     % Large & 61.6 &  0.3120 & 45.3 & 1.3 \\
     % Base  & 61.3 &  0.2706 & 44.9 & 1.2 \\
     % Small & 61.0 &  0.2194 & 43.9 & 1.2 \\
@@ -537,10 +553,10 @@ model is, the better scores it achieves.
     \bottomrule
   \end{tabular}
 
-  \caption{Quantitative results of the German $\rightarrow$ English translation
-    models on the \acs{wmt}~21 test set using three different automatic
-    evalutation metrics.}%
-  \label{tab:wmt21-scores-deen}
+  \caption{Quantitative results of the German $\leftrightarrow$ English
+    translation models on the \acs{wmt}~21 test set using \acs{chrf},
+    \acs{comet}, and \acs{bleu}.}%
+  \label{tab:wmt21-scores}
 \end{table}
 
 
@@ -708,8 +724,8 @@ Table \ref{tab:exp:cpu} shows
     \toprule
     Batch size & 1 & 2 & 4 & 8 & 16 & 32 & 64 & 128 \\
     \midrule
-    \acs{ar} -- Large &&  &  &  &  &  & 3,090 & 1,918 \\
-    \acs{ar} -- Base  &&  & 25,745 & 13,836 & 7,498 & 3,997 & 2,371 & 1,465 \\
+    \acs{ar} -- Large && 53,902 & 29,369 & 15,351 & 8,907 & 5,216 & 3,090 & 1,918 \\
+    \acs{ar} -- Base  && 47,145 & 25,745 & 13,836 & 7,498 & 3,997 & 2,371 & 1,465 \\
     \midrule
     Large & 7,020 & 3,874 & 2,292 & 1,547 & 1,179 & 973 & 850 & 782 \\
     Base  & 6,289 & 3,400 & 1,854 & 1,166 &   816 & 635 & 542 & 485 \\
@@ -725,6 +741,33 @@ Table \ref{tab:exp:cpu} shows
 \end{figure}
 
 
+
+
+\begin{figure}
+  \centering
+
+  \input{./img/throughputs/cpu-shortlist.tex}
+  \vspace{1\baselineskip}
+
+  \begin{tabular}{lrrrrrrrr}
+    \toprule
+    Batch size & 1 & 2 & 4 & 8 & 16 & 32 & 64 & 128 \\
+    \midrule
+    \acs{ar} -- Large &&  &  &  &  &  & \\
+    \acs{ar} -- Base  &&  & 18,914 & 13,597 & 10,946 & 9,643 & 9,154 \\
+    \midrule
+    Large & 12,799 & 9,870 & 8,245 & 7,545 & 7,434 & 7,511 & 7,639 \\
+    Base  &  2,549 & 2,298 & 2,263 & 2,306 & 2,399 & 2,503 & 2,609 \\
+    Small &  1,346 & 1,246 & 1,250 & 1,306 & 1,399 & 1,497 & 1,606 \\
+    Micro &    958 &   897 &   913 &   974 & 1,062 & 1,163 & 1,271 \\
+    Tiny  &    244 &   246 &   273 &   316 &   373 &   437 &   506 \\
+    \bottomrule
+  \end{tabular}
+
+  \caption{Wall times to translate one million sentences (in seconds) on 36 CPU
+    cores using lexical shortlist with different batch size settings.}%
+  \label{fig:throughput:a100}
+\end{figure}
 
 
 % ------------------------------------------------------------------------------
