--- a/thesis/img/throughputs/cpu-shortlist.tex
+++ b/thesis/img/throughputs/cpu-shortlist.tex
@@ -1,6 +1,6 @@
 \begin{tikzpicture}[gnuplot]
 %% generated with GNUPLOT 5.2p8 (Lua 5.3; terminal rev. Nov 2018, script rev. 108)
-%% Tue 09 Nov 2021 12:24:25 PM GMT
+%% Tue 09 Nov 2021 12:40:24 PM GMT
 \path (0.000,0.000) rectangle (13.500,8.000);
 \gpcolor{color=gp lt color border}
 \gpsetlinetype{gp lt border}
@@ -61,99 +61,87 @@
 \gpcolor{rgb color={0.200,0.200,0.200}}
 \gpsetlinewidth{2.50}
 \draw[gp path] (12.215,7.280)--(12.579,7.280);
-\draw[gp path] (6.704,7.691)--(8.201,4.967)--(9.783,3.317)--(11.365,2.366)--(12.947,1.842);
 \gpsetpointsize{4.00}
-\gppoint{gp mark 1}{(8.201,4.967)}
-\gppoint{gp mark 1}{(9.783,3.317)}
-\gppoint{gp mark 1}{(11.365,2.366)}
-\gppoint{gp mark 1}{(12.947,1.842)}
 \gppoint{gp mark 1}{(12.397,7.280)}
 \gpcolor{color=gp lt color border}
 \node[gp node right] at (12.031,6.818) {\acs{ar} Base};
 \gpcolor{rgb color={0.800,0.800,0.800}}
 \draw[gp path] (12.215,6.818)--(12.579,6.818);
-\draw[gp path] (6.463,7.691)--(6.618,7.171)--(8.201,4.337)--(9.783,2.772)--(11.365,2.045)%
-  --(12.947,1.640);
-\gppoint{gp mark 2}{(6.618,7.171)}
-\gppoint{gp mark 2}{(8.201,4.337)}
-\gppoint{gp mark 2}{(9.783,2.772)}
-\gppoint{gp mark 2}{(11.365,2.045)}
-\gppoint{gp mark 2}{(12.947,1.640)}
+\draw[gp path] (6.618,7.064)--(8.201,5.879)--(9.783,5.296)--(11.365,5.077);
+\gppoint{gp mark 2}{(6.618,7.064)}
+\gppoint{gp mark 2}{(8.201,5.879)}
+\gppoint{gp mark 2}{(9.783,5.296)}
+\gppoint{gp mark 2}{(11.365,5.077)}
 \gppoint{gp mark 2}{(12.397,6.818)}
 \gpcolor{color=gp lt color border}
 \node[gp node right] at (12.031,6.356) {Large};
 \gpcolor{rgb color={0.800,0.000,0.000}}
 \draw[gp path] (12.215,6.356)--(12.579,6.356);
-\draw[gp path] (1.872,4.123)--(3.454,2.717)--(5.036,2.010)--(6.618,1.677)--(8.201,1.512)%
-  --(9.783,1.420)--(11.365,1.365)--(12.947,1.335);
-\gppoint{gp mark 3}{(1.872,4.123)}
-\gppoint{gp mark 3}{(3.454,2.717)}
-\gppoint{gp mark 3}{(5.036,2.010)}
-\gppoint{gp mark 3}{(6.618,1.677)}
-\gppoint{gp mark 3}{(8.201,1.512)}
-\gppoint{gp mark 3}{(9.783,1.420)}
-\gppoint{gp mark 3}{(11.365,1.365)}
-\gppoint{gp mark 3}{(12.947,1.335)}
+\draw[gp path] (1.872,6.707)--(3.454,5.398)--(5.036,4.671)--(6.618,4.358)--(8.201,4.308)%
+  --(9.783,4.343)--(11.365,4.400);
+\gppoint{gp mark 3}{(1.872,6.707)}
+\gppoint{gp mark 3}{(3.454,5.398)}
+\gppoint{gp mark 3}{(5.036,4.671)}
+\gppoint{gp mark 3}{(6.618,4.358)}
+\gppoint{gp mark 3}{(8.201,4.308)}
+\gppoint{gp mark 3}{(9.783,4.343)}
+\gppoint{gp mark 3}{(11.365,4.400)}
 \gppoint{gp mark 3}{(12.397,6.356)}
 \gpcolor{color=gp lt color border}
 \node[gp node right] at (12.031,5.894) {Base};
 \gpcolor{rgb color={1.000,0.800,0.000}}
 \draw[gp path] (12.215,5.894)--(12.579,5.894);
-\draw[gp path] (1.872,3.797)--(3.454,2.505)--(5.036,1.814)--(6.618,1.506)--(8.201,1.350)%
-  --(9.783,1.269)--(11.365,1.227)--(12.947,1.202);
-\gppoint{gp mark 4}{(1.872,3.797)}
-\gppoint{gp mark 4}{(3.454,2.505)}
-\gppoint{gp mark 4}{(5.036,1.814)}
-\gppoint{gp mark 4}{(6.618,1.506)}
-\gppoint{gp mark 4}{(8.201,1.350)}
-\gppoint{gp mark 4}{(9.783,1.269)}
-\gppoint{gp mark 4}{(11.365,1.227)}
-\gppoint{gp mark 4}{(12.947,1.202)}
+\draw[gp path] (1.872,2.125)--(3.454,2.012)--(5.036,1.997)--(6.618,2.016)--(8.201,2.058)%
+  --(9.783,2.104)--(11.365,2.151);
+\gppoint{gp mark 4}{(1.872,2.125)}
+\gppoint{gp mark 4}{(3.454,2.012)}
+\gppoint{gp mark 4}{(5.036,1.997)}
+\gppoint{gp mark 4}{(6.618,2.016)}
+\gppoint{gp mark 4}{(8.201,2.058)}
+\gppoint{gp mark 4}{(9.783,2.104)}
+\gppoint{gp mark 4}{(11.365,2.151)}
 \gppoint{gp mark 4}{(12.397,5.894)}
 \gpcolor{color=gp lt color border}
 \node[gp node right] at (12.031,5.432) {Small};
 \gpcolor{rgb color={0.800,0.000,1.000}}
 \draw[gp path] (12.215,5.432)--(12.579,5.432);
-\draw[gp path] (1.872,2.460)--(3.454,1.817)--(5.036,1.455)--(6.618,1.306)--(8.201,1.220)%
-  --(9.783,1.179)--(11.365,1.155)--(12.947,1.145);
-\gppoint{gp mark 5}{(1.872,2.460)}
-\gppoint{gp mark 5}{(3.454,1.817)}
-\gppoint{gp mark 5}{(5.036,1.455)}
-\gppoint{gp mark 5}{(6.618,1.306)}
-\gppoint{gp mark 5}{(8.201,1.220)}
-\gppoint{gp mark 5}{(9.783,1.179)}
-\gppoint{gp mark 5}{(11.365,1.155)}
-\gppoint{gp mark 5}{(12.947,1.145)}
+\draw[gp path] (1.872,1.587)--(3.454,1.542)--(5.036,1.544)--(6.618,1.569)--(8.201,1.610)%
+  --(9.783,1.654)--(11.365,1.703);
+\gppoint{gp mark 5}{(1.872,1.587)}
+\gppoint{gp mark 5}{(3.454,1.542)}
+\gppoint{gp mark 5}{(5.036,1.544)}
+\gppoint{gp mark 5}{(6.618,1.569)}
+\gppoint{gp mark 5}{(8.201,1.610)}
+\gppoint{gp mark 5}{(9.783,1.654)}
+\gppoint{gp mark 5}{(11.365,1.703)}
 \gppoint{gp mark 5}{(12.397,5.432)}
 \gpcolor{color=gp lt color border}
 \node[gp node right] at (12.031,4.970) {Micro};
 \gpcolor{rgb color={0.000,0.000,0.800}}
 \draw[gp path] (12.215,4.970)--(12.579,4.970);
-\draw[gp path] (1.872,2.023)--(3.454,1.586)--(5.036,1.357)--(6.618,1.228)--(8.201,1.179)%
-  --(9.783,1.149)--(11.365,1.133)--(12.947,1.124);
-\gppoint{gp mark 6}{(1.872,2.023)}
-\gppoint{gp mark 6}{(3.454,1.586)}
-\gppoint{gp mark 6}{(5.036,1.357)}
-\gppoint{gp mark 6}{(6.618,1.228)}
-\gppoint{gp mark 6}{(8.201,1.179)}
-\gppoint{gp mark 6}{(9.783,1.149)}
-\gppoint{gp mark 6}{(11.365,1.133)}
-\gppoint{gp mark 6}{(12.947,1.124)}
+\draw[gp path] (1.872,1.413)--(3.454,1.386)--(5.036,1.393)--(6.618,1.420)--(8.201,1.460)%
+  --(9.783,1.505)--(11.365,1.553);
+\gppoint{gp mark 6}{(1.872,1.413)}
+\gppoint{gp mark 6}{(3.454,1.386)}
+\gppoint{gp mark 6}{(5.036,1.393)}
+\gppoint{gp mark 6}{(6.618,1.420)}
+\gppoint{gp mark 6}{(8.201,1.460)}
+\gppoint{gp mark 6}{(9.783,1.505)}
+\gppoint{gp mark 6}{(11.365,1.553)}
 \gppoint{gp mark 6}{(12.397,4.970)}
 \gpcolor{color=gp lt color border}
 \node[gp node right] at (12.031,4.508) {Tiny};
 \gpcolor{rgb color={0.000,0.800,0.000}}
 \draw[gp path] (12.215,4.508)--(12.579,4.508);
-\draw[gp path] (1.872,1.593)--(3.454,1.334)--(5.036,1.210)--(6.618,1.149)--(8.201,1.120)%
-  --(9.783,1.107)--(11.365,1.098)--(12.947,1.094);
-\gppoint{gp mark 7}{(1.872,1.593)}
-\gppoint{gp mark 7}{(3.454,1.334)}
-\gppoint{gp mark 7}{(5.036,1.210)}
-\gppoint{gp mark 7}{(6.618,1.149)}
-\gppoint{gp mark 7}{(8.201,1.120)}
-\gppoint{gp mark 7}{(9.783,1.107)}
-\gppoint{gp mark 7}{(11.365,1.098)}
-\gppoint{gp mark 7}{(12.947,1.094)}
+\draw[gp path] (1.872,1.094)--(3.454,1.095)--(5.036,1.107)--(6.618,1.126)--(8.201,1.152)%
+  --(9.783,1.180)--(11.365,1.211);
+\gppoint{gp mark 7}{(1.872,1.094)}
+\gppoint{gp mark 7}{(3.454,1.095)}
+\gppoint{gp mark 7}{(5.036,1.107)}
+\gppoint{gp mark 7}{(6.618,1.126)}
+\gppoint{gp mark 7}{(8.201,1.152)}
+\gppoint{gp mark 7}{(9.783,1.180)}
+\gppoint{gp mark 7}{(11.365,1.211)}
 \gppoint{gp mark 7}{(12.397,4.508)}
 \gpcolor{color=gp lt color border}
 \gpsetlinewidth{1.00}
